--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "output": "release",
       "buildResources": "build"
     },
-    "icon": "icon.png",
+    "icon": "src/media/icon.png",
     "extraResources": [
       {
         "from": "node_modules/",
