--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   },
   "dependencies": {
     "@electron/remote": "^2.1.2",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "electron-dl": "^4.0.0",
-    "electron-store": "^8.2.0"
+    "electron-store": "^8.2.0",
+    "fluent-ffmpeg": "^2.1.3"
   }
 }
